# winkit

./: README.md
archive/: README.md
archive/delpyc/: README.md  pyproject.toml
archive/delpyc/src/delpyc/: __init__.py  core.py
archive/wallsys_old/: build.bat
delcache/: README.md  build.bat
delcache/src/: delcache.cs
diskwatch/: README.md  build.bat
diskwatch/src/: commandRunner.cs  config.cs  masterState.cs  program.cs  remind.cs  resultFile.cs
shared/: README.md  build.bat
shared/conf/: .cats  .indexignore  catsort.ini
shared/src/: catsort.cs  delcache.cs  dirdiff.cs  reindex.cs
wallswitch/: README.md  build.bat
wallswitch/src/: wallswitch.cs
